--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     <div class="section-title">Profile Summary</div>
     <div class="profile-summary">
-      Student at PRSIAMS looking forward to obtain an entry level position in accounting, managing and auditing for utilizing my skill of working in groups of people and creating an ambitious environment.
+      Student at PESIAMS looking forward to obtain an entry level position in accounting, managing and auditing for utilizing my skill of working in groups of people and creating an ambitious environment.
     </div>
 
     <div class="section-title">Skills</div>
